Enable running the app as 2 instances EG framer on port 8080 and framee on port 8081 This proves that CORS works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-app.jwt.secret=secret
-app.jwt.expires-at-offset-seconds
+app.jwt-secret=secret
+app.jwt-expires-at-offset-seconds
+app.framer-port=8080
+app.framee-port=8081
